Camera Ready Version

--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -41,9 +41,18 @@ toc:
       - name: But Why Computer Use Agents?
 
 authors:
-  - name: Anonymous
+  - name: Kenneth Marino
+    url: "https://kennethmarino.com/"
     affiliations:
-      name: Anonymous
+      name: University of Utah
+  - name: Md Farhan Ishmam
+    url: "https://farhanishmam.github.io/"
+    affiliations:
+      name: University of Utah
+  - name: Ana Marasovic
+    url: "https://www.anamarasovic.com/"
+    affiliations:
+      name: University of Utah
 
 _styles: >
   .fake-img {
@@ -67,7 +76,7 @@ In the last few years, and particularly in the most recent past year, AI systems
 
 The goal of this survey is to organize much of the historical and recent work on computer use agents. First, we define exactly what we mean by "Computer Use" in [What is Computer Use](#what-is-computer-use). We then define and categorize different environments, datasets and evaluations for computer use agents in [Environments and Datasets](#environments-and-datasets). Next, we discuss the methodological work in this area in [Models and Methods](#models-and-methods) focusing in particular on the recent trend of "LLM Agents" and provide an accessible explanation of this class of systems and trends within this research. Finally, we discuss ongoing trends, areas for improvement and possible safety and ethical concerns brought about by this research in [Discussion](#discussion).
 
-So what has shaped this sudden interest in computer use Agents in the first place? What goals are academic and industry researchers trying to serve? The first explanation is that the advent of extremely capable language and vision language models (LLMs / VLMs) has made the goal of autonomous computer use agents suddenly quite plausible. These models, trained now on trillions of tokens scraped from the web, are incredibly powerful few- and zero-shot learners <d-cite key="brown2020language,kojima2022large"></d-cite> able, with little or no new training data, to be generally proficient at many language tasks, making them adaptable to many different problems.
+So what has shaped this sudden interest in computer use agents in the first place? What goals are academic and industry researchers trying to serve? The first explanation is that the advent of extremely capable language and vision language models (LLMs / VLMs) has made the goal of autonomous computer use agents suddenly quite plausible. These models, trained now on trillions of tokens scraped from the web, are incredibly powerful few- and zero-shot learners <d-cite key="brown2020language,kojima2022large"></d-cite> able, with little or no new training data, to be generally proficient at many language tasks, making them adaptable to many different problems.
 
 Computer use is not only difficult in terms of being a long-horizon sequential decision-making problem, but also linguistically challenging and knowledge-laden. Before these large-scale models, language problems required models to be trained from scratch, language understanding was often limited and brittle and few-shot reasoning was almost unheard of. This made it hard to do these computer use tasks. Take a popular web use task example: booking an airline ticket. To solve the problem, you first have to be able to precisely understand a user's request: what airline they prefer, when they want to travel, etc. The agent also must have quite a bit of both commonsense and specific knowledge about airline ticket purchasing to accomplish this. The agent needs to not only understand the request and know how to navigate the airline website, it also needs to understand things like "I should not book a $10k ticket." With these capable LLMs, we not only have a backbone which has general capability that can start to make progress on the task, but also have these essential commonsense capabilities to make computer use agents possible.
 
@@ -89,7 +98,7 @@ As we discuss later on in [Environments and Datasets](#environments-and-datasets
 
 The landscape of computer use research spans diverse environments, from desktop operating systems to web browsers and mobile platforms. Each environment presents unique challenges and opportunities for developing autonomous agents. Below, we present an interactive exploration of the major datasets and benchmarks that have shaped this field.
 
-We divide the datasets into several broad categories. Computer and OS Control describes environments which give more or less full simulated access to a computer or operating system. Web Control and Navigation describes environments where access is mostly to the web (live or statically defined pages). Text-Only Web Environments describes specifically text-only versions of web environments. Web QA and Classification are datasets which ask static questions or classifications on web pages as opposed to controllable environments. Finally we include Coding and Assistant Tasks for coding tasks and the broad category of assistant tasks using computer use elements.
+We divide the datasets into several broad categories. Computer and OS Control describes environments which give more or less full simulated access to a computer or operating system. Web Control and Navigation describes environments where access is mostly to the web (live or statically defined pages). Text-Only Web Environments describe specifically versions of web environments with just text. Web QA and Classification are datasets which ask static questions or classifications on web pages as opposed to controllable environments. Finally we include Coding and Assistant Tasks for coding tasks and the broad category of assistant tasks using computer use elements.
 
 We realize that the category "web browsing" is somewhat vague. It can include tasks involved with changing the settings of a browser such as Chrome and tasks requiring finding information on the web <d-cite key="bonatti2024windows"></d-cite>. Similarly, even what is meant by the web can be very different. This can mean access to a few websites such as in VisualWebArena <d-cite key="koh2024visualwebarena"></d-cite> or access to the entire web This list is by no means complete and likely by the time we hit publish there will be many more datasets and environments.
 
@@ -183,7 +192,7 @@ Another important aspect of all of these frameworks is how they specifically int
 
 The wide variety of inputs used by different models can often create issues with evaluations and benchmarking models. As shown in Table 5 of OSWorld <d-cite key="xie2024osworld"></d-cite> (reproduced below), the same backbone model prompted differently and using different representations of the same input can have vastly different levels of performance. Ideally, comparisons would be made between models using the same assumptions about the input space.
 
-{% include figure.liquid loading="eager" path="assets/img/2026-04-27-web-agent/inputtype.png" class="img-fluid rounded z-depth-1" alt="Table 5 from OSWorld showing different performance based on input type" caption="Table 5 from OSWorld showing greatly different performance based on input type." %}
+{% include figure.liquid loading="eager" path="assets/img/2026-04-27-web-agent/inputtype.png" class="img-fluid rounded z-depth-1" alt="Table 5 from OSWorld <d-cite key='xie2024osworld'></d-cite> showing different performance based on input type" caption="Table 5 from OSWorld <d-cite key='xie2024osworld'></d-cite> showing the success rate of their baseline LLM and VLM agents on task categories of the OSWorld environment." %}
 
 Similarly, methods have a wide variety of ways of dealing with the action spaces in the environment. In the earliest works, the action space was at the lowest level, made up of atomic mouse (x, y) positions and click actions <d-cite key="pmlr-v70-shi17a"></d-cite>, or click and typing actions <d-cite key="liu2018reinforcement"></d-cite>. Some works such as UGround <d-cite key="gou2024navigating"></d-cite> still use these action spaces, while other works have tried to stay grounded to the visual space without coordinates<d-cite key="wu2025gui"></d-cite>. For the most part however, when language model agents became the more dominant paradigm, the action space often changed to better match with the language output of LLMs. Works such as AutoWebGLM <d-cite key="lai2024autowebglm"></d-cite> or Agent S <d-cite key="agashe2024agent"></d-cite> or many others <d-cite key="abuelsaad2024agent,koh2024visualwebarena,Yu2024ExACTTA"></d-cite> allow for the language model to specify actions in templated language. In other words, it treats the computer action space as a tool <d-cite key="schick2023toolformer"></d-cite>. It still allows for clicks and typing, but rather than specify an x,y coordinate, it specifies click(id) with the id of the UI element to click on. These works also define a set of pre-defined web actions such as jump_to(url, newtab) which navigates a particular tab to a specified url so that some actions can be taken without specifying every mouse and keyboard action required.
 
@@ -191,7 +200,7 @@ With these custom action spaces, prompts are used to tell the LLM the set of ava
 
 ### Proprietary Systems
 
-It is also worth mentioning that Web and OS control agents are not only an academic topic, but an emerging product area for AI companies. Google DeepMind has announced Project Mariner <d-cite key="projectmariner"></d-cite> and later Gemini 3.0 with web browsing<d-cite key="pichai2025gemini3"></d-cite> , OpenAI with Operator <d-cite key="computeruseagent"></d-cite> and Anthropic with Computer Use <d-cite key="anthropicwebblog"></d-cite> and several others <d-cite key="browseruse2024,yutori2025navigator,cohere2025agentstudio"></d-cite>. Unfortunately, some of these models are in limited release, either behind trusted user groups or premium subscriptions, making evaluation difficult.
+It is also worth mentioning that Web and OS control agents are not only an academic topic, but an emerging product area for AI companies. Google DeepMind has announced Project Mariner <d-cite key="projectmariner"></d-cite> and later Gemini 3.0 with web browsing <d-cite key="pichai2025gemini3"></d-cite> , OpenAI with Operator <d-cite key="computeruseagent"></d-cite> and Anthropic with Computer Use <d-cite key="anthropicwebblog"></d-cite> and several others <d-cite key="browseruse2024,yutori2025navigator,cohere2025agentstudio"></d-cite>. Unfortunately, some of these models are in limited release, either behind trusted user groups or premium subscriptions, making evaluation difficult.
 
 Some of these projects have reported numbers on some popular computer use benchmarks, but none of these projects have released papers or detailed technical reports, so details about how the agents work and how the evaluations were conducted are not known. Based on the limited information released, it seems apparent that these agents correspond with the line of work described in Computer Use LM Agents, but other details such as how the base models are fine-tuned, data used for training etc are not known. Ultimately, these black-box releases are very relevant to the interest in computer use agents, but cannot be easily benchmarked or relied upon to contribute to the academic literature. This will likely continue to be a tension going forward, as it has been in the broader literature of LLMs.
 
@@ -233,7 +242,7 @@ One observation to make here is that great improvements have been made on all of
 
 One area where computer use agents often get stuck is planning. A common issue is that LLM agents will sometimes get stuck in a state and repeatedly try to perform some action unsuccessfully or being distracted by an irrelevant web element. An analysis in Figure 3 of WebRL <d-cite key="qi2024webrl"></d-cite> for instance shows that this is one of the most common issues for many baseline agents.
 
-{% include figure.liquid loading="eager" path="assets/img/2026-04-27-web-agent/errors.png" class="img-fluid rounded z-depth-1" alt="Figure 3 from WebRL showing breakdown of error types in web agents" caption="Figure 3 from WebRL showing the most common error types for baseline agents, with planning-related issues being predominant." %}
+{% include figure.liquid loading="eager" path="assets/img/2026-04-27-web-agent/errors.png" class="img-fluid rounded z-depth-1" alt="Figure 3 from WebRL <d-cite key='qi2024webrl'></d-cite>  showing breakdown of error types in web agents" caption="Figure 3 from WebRL <d-cite key='qi2024webrl'></d-cite>  showing the most common error types for different web agents, with planning-related issues being predominant." %}
 
 As mentioned earlier, many works try to solve this issue with either using an LLM as a "planner", relying on the LLM itself to recognize that it is stuck, or using some test-time search to escape loops <d-cite key="Yu2024ExACTTA,koh2024tree"></d-cite>.
 
@@ -263,6 +272,13 @@ A recurring discussion point in the philosophy of computer use agents is that cu
 
 On a similar note, Agentic Web Interfaces (AWI) <d-cite key="lu2025buildwebagentsagents"></d-cite> discusses an interaction layer optimized for perception and action with the web interface. Designing AWIs around principles of safety, efficiency, and standardization reframes core challenges of web agents, *e.g.*, DOM parsing and UI understanding, as shared responsibilities of web developers, standards bodies, and agent designers. Yet the argument for building web agents still remains in the era of agentic web, as we may need web agents to navigate through the older pre-agentic websites.
 
+### Agentic Inference Cost
+Agentic systems carry a much higher cost multiple than traditional zero-shot LLM/VLM calls, mainly due to running iterative reasoning loops, multi-stage planning, and the "unreliability tax" of retries <d-cite key="ponnusamy2025costofthinking"></d-cite>. The tax is not solely due to the extra actions, but also due to the extra reflection as these agents reason, act, and reassess outcomes, as humans do. Estimates of tokens generated during agentic inference are unreliable, as research shows that performance scales with the number of test-time tokens <d-cite key="muennighoff-etal-2025-s1,snell2025scaling"></d-cite>.
+
+While the unit price of tokens has decreased, with some benchmarks seeing performance-adjusted costs drop by 40x annually <d-cite key="epoch2025llminferencepricetrends"></d-cite>, the volume of tokens generated by "super agents" can be 5–25x higher than basic inferences <d-cite key="ponnusamy2025costofthinking"></d-cite>. Current research points to the need for cost-controlled evaluation and to jointly optimize performance and cost <d-cite key="kapoor2024ai"></d-cite>. Recent optimization efforts, such as Agent Workflow Optimization (AWO), focus on "meta-tools" to coalesce structural tool calls, which can reduce total LLM calls by roughly 12% <d-cite key="abuzakuk2026optimizing"></d-cite>. Optimizing agentic inference could be the key to widespread real-world deployment of AI agents.
+
+{% include figure.liquid loading="eager" path="assets/img/2026-04-27-web-agent/inferenceCost.png" class="img-fluid rounded z-depth-1" alt="Figure 2 from AI Agents that Matter <d-cite key='kapoor2024ai'></d-cite> showing joint optimization that maintains accuracy while reducing cost." caption="Figure 2 from AI Agents that Matter <d-cite key='kapoor2024ai'></d-cite> showing joint optimization that maintains performance while reducing cost." %}
+
 ### But Why Computer Use Agents?
 
 As discussed in the Introduction, the two most common goals for Computer Use Agents are related to **automation** and **accessibility**. The automation motivation is compelling - as described in WebGPT <d-cite key="nakano2021webgpt"></d-cite>, they envision: "Picture this scenario: You type in a task description, then relax and enjoy a cup of coffee while watching tasks like booking tickets online, conducting web searches, managing files, and creating PowerPoint presentations get completed automatically." This vision of seamless task automation drives much of the current research effort.
@@ -275,7 +291,12 @@ Nevertheless, the potential certainly exists in the future for these agents to b
 
 <iframe class="l-page" src="/2026/assets/html/2026-04-27-web-agent/carousel.html" width="100%" height="520" frameborder="0" style="border-radius: 12px; margin: 1rem 0;"></iframe>
 
-## Acknowledgments
+## Author’s Note
 
-This survey was adapted from the original interactive web version created by the authors. We tried to take advantage of the medium of the web specifically to make the survey a bit different and more interactive for readers. In addition, certain parts of the survey, such as the list of datasets would simply not have worked in a normal linear blog. Claude Sonnet 4 was used to help build the website. 
+## Author’s Note
 
+This survey was adapted from the [original interactive web version](https://kennethmarino.com/computeruse/computeruse.html) created by the authors. We tried to take advantage of the web as a medium, specifically to make the survey a bit different and more interactive for readers. In addition, certain parts of the survey, such as the list of datasets, would simply not have worked in a normal linear blog. Claude Sonnet 4 was used to help build the website. Special thanks to [Dai-Jie Wu](https://jaywu109.github.io/) for providing valuable feedback and helping debug browser compatibility issues.
+
+## Author Contributions
+
+Initial paper collection was done jointly by KM and AM. Most sections were written by KM, except for Environments and Datasets, which were split between KM and AM, and Agentic Web and Inference Cost, which were written by MFI. The [original website](https://kennethmarino.com/computeruse/computeruse.html) was created with Claude Sonnet 4, and the transfer from the original website to the blog was done by MFI. Final editing was done by both KM and AM.
