--- a/assets/bibliography/2026-04-27-web-agent.bib
+++ b/assets/bibliography/2026-04-27-web-agent.bib
@@ -1822,3 +1822,70 @@ doi = {10.18653/v1/2025.emnlp-main.314},
 pages = {6175--6197},
 ISBN = {979-8-89176-332-6}
 }
+
+@misc{ponnusamy2025costofthinking,
+  title        = {The Cost of Thinking: Agentic AI, Inference Economics, and the Future of Hybrid Intelligence},
+  author       = {Ahilan Ponnusamy},
+  year         = {2025},
+  month        = jul,
+  day          = {3},
+  howpublished = {Medium},
+  url          = {https://medium.com/@ahilanp/the-cost-of-thinking-agentic-ai-inference-economics-and-the-future-of-hybrid-intelligence-1393182abd13},
+  note         = {Accessed: 2026-02-27}
+}
+
+@inproceedings{muennighoff-etal-2025-s1,
+    title = "s1: Simple test-time scaling",
+    author = "Muennighoff, Niklas  and
+      Yang, Zitong  and
+      Shi, Weijia  and
+      Li, Xiang Lisa  and
+      Fei-Fei, Li  and
+      Hajishirzi, Hannaneh  and
+      Zettlemoyer, Luke  and
+      Liang, Percy  and
+      Candes, Emmanuel  and
+      Hashimoto, Tatsunori",
+    editor = "Christodoulopoulos, Christos  and
+      Chakraborty, Tanmoy  and
+      Rose, Carolyn  and
+      Peng, Violet",
+    booktitle = "Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing",
+    month = nov,
+    year = "2025",
+    address = "Suzhou, China",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2025.emnlp-main.1025/",
+    doi = "10.18653/v1/2025.emnlp-main.1025",
+    pages = "20275--20321",
+    ISBN = "979-8-89176-332-6"
+}
+
+@inproceedings{
+snell2025scaling,
+title={Scaling {LLM} Test-Time Compute Optimally Can be More Effective than Scaling Parameters for Reasoning},
+author={Charlie Victor Snell and Jaehoon Lee and Kelvin Xu and Aviral Kumar},
+booktitle={The Thirteenth International Conference on Learning Representations},
+year={2025},
+url={https://openreview.net/forum?id=4FWAwZtd2n}
+}
+
+@misc{epoch2025llminferencepricetrends,
+  title        = {LLM inference prices have fallen rapidly but unequally across tasks},
+  author       = {Cottier, Ben and Snodin, Ben and Owen, David and Adamczewski, Tom},
+  year         = {2025},
+  month        = mar,
+  url          = {https://epoch.ai/data-insights/llm-inference-price-trends},
+  note         = {Published March 12, 2025. Accessed: 2026-02-27}
+}
+
+@article{abuzakuk2026optimizing,
+  title={Optimizing Agentic Workflows using Meta-tools},
+  author={Abuzakuk, Sami and Kermarrec, Anne-Marie and Sharma, Rishi and Veski, Rasmus Moorits and de Vos, Martijn},
+  journal={arXiv preprint arXiv:2601.22037},
+  year={2026}
+}
+
+
+
+
