--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -38,7 +38,10 @@ toc:
           - name: Long-horizon Problems are Hard
       - name: Safety/Ethical Concerns
       - name: Agentic Web
+      - name: Agentic Inference Cost
       - name: But Why Computer Use Agents?
+  - name: Author’s Note
+  - name: Author Contributions
 
 authors:
   - name: Kenneth Marino
@@ -100,7 +103,7 @@ The landscape of computer use research spans diverse environments, from desktop 
 
 We divide the datasets into several broad categories. Computer and OS Control describes environments which give more or less full simulated access to a computer or operating system. Web Control and Navigation describes environments where access is mostly to the web (live or statically defined pages). Text-Only Web Environments describe specifically versions of web environments with just text. Web QA and Classification are datasets which ask static questions or classifications on web pages as opposed to controllable environments. Finally we include Coding and Assistant Tasks for coding tasks and the broad category of assistant tasks using computer use elements.
 
-We realize that the category "web browsing" is somewhat vague. It can include tasks involved with changing the settings of a browser such as Chrome and tasks requiring finding information on the web <d-cite key="bonatti2024windows"></d-cite>. Similarly, even what is meant by the web can be very different. This can mean access to a few websites such as in VisualWebArena <d-cite key="koh2024visualwebarena"></d-cite> or access to the entire web This list is by no means complete and likely by the time we hit publish there will be many more datasets and environments.
+We realize that the category "web browsing" is somewhat vague. It can include tasks involved with changing the settings of a browser such as Chrome and tasks requiring finding information on the web <d-cite key="bonatti2024windows"></d-cite>. Similarly, even what is meant by the web can be very different. This can mean access to a few websites such as in VisualWebArena <d-cite key="koh2024visualwebarena"></d-cite> or access to the entire web. This list is by no means complete and likely by the time we hit publish there will be many more datasets and environments.
 
 <iframe class="l-page" src="/2026/assets/html/2026-04-27-web-agent/observatory.html" width="100%" height="750" frameborder="0" style="border-radius: 12px; margin: 1.5rem 0;"></iframe>
 
@@ -170,7 +173,7 @@ The first category of work does not train the LLM backbone, but relies on innova
 
 #### Supervised Finetuning
 
-Because base VLMs and LLMs are trained on typical web images and text, certain text and images may be out of distribution and models will struggle on these tasks <d-cite key="rahmanzadehgervi2024vision"></d-cite>. This is often the case for web tasks as well, so several works have tried to train models for this task (e.g xLAM <d-cite key="zhang2024xlam"></d-cite>). CogAgent <d-cite key="hong2024cogagent"></d-cite> for example adds a high-resolution image stack to CogVLM <d-cite key="wang2023cogvlm"></d-cite> and finetunes on a large-scale dataset of GUI and OCR tasks. Similarly, OS-ATLAS <d-cite key="wu2024atlas"></d-cite> creates a large GUI grounding corpus and finetune Qwen2-VL <d-cite key="wang2024qwen2"></d-cite> and InternVL-2 <d-cite key="chen2024far"></d-cite> to better perform on these tasks.
+Because base VLMs and LLMs are trained on typical web images and text, certain text and images may be out of distribution and models will struggle on these tasks <d-cite key="rahmanzadehgervi2024vision"></d-cite>. This is often the case for web tasks as well, so several works have tried to train models for this task (e.g xLAM <d-cite key="zhang2024xlam"></d-cite>). CogAgent <d-cite key="hong2024cogagent"></d-cite> for example adds a high-resolution image stack to CogVLM <d-cite key="wang2023cogvlm"></d-cite> and finetunes on a large-scale dataset of GUI and OCR tasks. Similarly, OS-ATLAS <d-cite key="wu2024atlas"></d-cite> creates a large GUI grounding corpus and finetunes Qwen2-VL <d-cite key="wang2024qwen2"></d-cite> and InternVL-2 <d-cite key="chen2024far"></d-cite> to better perform on these tasks.
 
 #### RL/Exploration Finetuning
 
@@ -242,7 +245,7 @@ One observation to make here is that great improvements have been made on all of
 
 One area where computer use agents often get stuck is planning. A common issue is that LLM agents will sometimes get stuck in a state and repeatedly try to perform some action unsuccessfully or being distracted by an irrelevant web element. An analysis in Figure 3 of WebRL <d-cite key="qi2024webrl"></d-cite> for instance shows that this is one of the most common issues for many baseline agents.
 
-{% include figure.liquid loading="eager" path="assets/img/2026-04-27-web-agent/errors.png" class="img-fluid rounded z-depth-1" alt="Figure 3 from WebRL <d-cite key='qi2024webrl'></d-cite>  showing breakdown of error types in web agents" caption="Figure 3 from WebRL <d-cite key='qi2024webrl'></d-cite>  showing the most common error types for different web agents, with planning-related issues being predominant." %}
+{% include figure.liquid loading="eager" path="assets/img/2026-04-27-web-agent/errors.png" class="img-fluid rounded z-depth-1" alt="Figure 3 from WebRL <d-cite key='qi2024webrl'></d-cite> showing breakdown of error types in web agents" caption="Figure 3 from WebRL <d-cite key='qi2024webrl'></d-cite> showing the most common error types for different web agents, with planning-related issues being predominant." %}
 
 As mentioned earlier, many works try to solve this issue with either using an LLM as a "planner", relying on the LLM itself to recognize that it is stuck, or using some test-time search to escape loops <d-cite key="Yu2024ExACTTA,koh2024tree"></d-cite>.
 
@@ -290,8 +293,6 @@ There can often be a large disconnect between the use cases, datasets and models
 Nevertheless, the potential certainly exists in the future for these agents to be useful for accessibility, not just by those with visual impairment, but people with severe neuropathy or motor control symptoms as well as people with cognitive or memory issues which might make common web tasks difficult. Computer use agents will first have to drastically improve in performance and researchers will have to work with health researchers, providers and affected people to develop truly useful accessibility features using this technology.
 
 <iframe class="l-page" src="/2026/assets/html/2026-04-27-web-agent/carousel.html" width="100%" height="520" frameborder="0" style="border-radius: 12px; margin: 1rem 0;"></iframe>
-
-## Author’s Note
 
 ## Author’s Note
 
